Updated index.html with slides image

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <p>Git w obrazkach to projekt, dzięki któremu prezentacja koncepcji związanych z tym systemem kontroli wersji stanie się trochę bardziej kolorowa. Jak wiadomo, obrazki przemawiają do wyobraźni znacznie mocniej, niż najmocniejsze słowa.</p>
 
-<img src="images/slides.png"/>
+<img src="images/prezentacja.png"/>
 
 
 
